Config-Map.yaml
# Run kubectl apply -f <file-name> to create the config map object 
# kubectl get configmaps <name>
---

apiVersion: v1
kind: Pod
metadata:
  name: my-custom-pod
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 8080
