nodeaffinity.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-deployment
spec:
  selector:
    matchLabels:
      env: prod
  replicas: 3
  template:
    metadata:
      name: myapp-pod
      labels:
        env: prod
    spec:
      containers:
        - name: myapp-nginx
          image: nginx
          ports:
            - containerPort: 8080
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: size
                    operator: In 
                    values:
                      - large

# to check lables in nodes kubectl get nodes --show-labels
