nodename.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-deployment
spec:
  selector:
    matchLabels:
      env: prod
  replicas: 3
  template:
    metadata:
      name: myapp-pod
      labels:
        env: prod
    spec:
      containers:
        - name: myapp-nginx
          image: nginx
      nodeName: node02

# to excute the above you need to know the node name and you get that by k get nodes
