podtest.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
spec:
  containers:
    - name: my-web-app
      image: nginx
      ports:
        - containerPort: 80
