podvol-claim.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webapp
spec:
  containers:
  - name: event-simulator
    image: kodekloud/event-simulator
    volumeMounts:
    - mountPath: /log
      name: log-volume
  volumes:
    - name: log-volume
      persistentVolumeClaim:
        claimName: claim-log-1
