staticpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: static-busybox
  labels:
    type: static
spec:
  containers:
    - name: static-busybox
      image: busybox
      command:
        - sleep
        - "1000"
